12. Always send +/- volume-step when up/down volume button pressed.
13. If desktop layout is showing a single volume button, use mobile style.
14. Increase minimum desktop layout width to 750px for volume slider.
15. Fix layout of volume-dialog when used in desktop layout.
16. Add server-side setting to control whether 'Fixed volume', and disabled
    slider, is used for fixed volume players.
17. Remove 'Fixed volume' label, just disable slider for fixed volume players.

2.1.3
-----
1. Add meta tag for IE11
2. Fix light themes for embedded pages - always use main light variant.
3. Use primary colour for active items with all light themes, as accent is too
   light.
4. Hide 'Move to next in queue' menu item for current track.
5. Try to hide 'Play Next' in 'More' list even if it has no 'style'
6. Allow LMS docs accessed via http://SERVER:9000/html/docs/ to scroll when
   Material set as default.

2.1.2
-----
1. Translation updates.
2. Fix title (sometimes) missing from 'Appended XXX to the play queue' message.
3. Show composer in toolbar, and window titlebar, if track's genre is in
   composer genres.
4. If list of composer, or conductor, genres is empty then set to default.
5. Fix ratings not showing in track list whist browsing.

2.1.1
-----
1. Fix track listing when multi-disc albums shown as one.
2. Fix track count in rating dialog for multi-disc albums shown as one.
3. Translation update.
4. Show descriptions in settings dialogs even for mobile.

2.1.0
-----
 1. Merge some options; e.g. show ratings, show tech info, etc.
 2. Allow showing of ratings even if TrackStat is not installed.
 3. Use Ctrl+Shift+(N) to set rating.
 4. Add 'Append random album' to a genre's 'Albums' context menu.
 5. Make 'New version available', in information dialog, a link to
    '/updateinfo.html'
 6. Allow adding custom actions to artist and album action menus.
 7. Move 'Set rating for all tracks' action into album action menu.